# Backtesting-Platform

./: DataLoader.ipynb  DataLoader.py  EDA.py  README.md  __init__.py  pyproject.toml
BTplatform/: DataLoader.py  EDA.py
BTplatform.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
BTplatorm/: __init__.py
Notebooks/: DataLoader.ipynb  EDA.ipynb  Strategy.ipynb
