[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BTplatform"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "statsmodels",
  "math",
  'IPython', 
  'seaborn', 
  'warnings', 
]

[tool.setuptools.packages.find]
where = ["."]
include = ["BTplatform*"]
exclude = ["Data*", "data*", "Notebooks*", "notebooks*"]